feat: 등산 기록 조회 응답 형식 변경